--- a/index.html
+++ b/index.html
@@ -51,9 +51,71 @@
     </div>
   </nav>
 
-  <!-- JUMBOTRON -->
+  <!-- IMAGE SLIDER -->
+  <div id="slides" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+          <li data-target="#slides" data-slide-to="0" class="active"></li>
+          <li data-target="#slides" data-slide-to="1"></li>
+          <li data-target="#slides" data-slide-to="2"></li>
+          <li data-target="#slides" data-slide-to="3"></li>
+      </ul>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/jumbotron1.jpg" alt="Soccer 1">
+          </div>
+          <div class="carousel-item">
+            <img src="img/jumbotron2.jpg" alt="Soccer 2">
+          </div>
+          <div class="carousel-item">
+            <img src="img/jumbotron3.jpg" alt="Soccer 3">
+          </div>
+          <div class="carousel-item">
+            <img src="img/jumbotron4.jpg" alt="Soccer 4">
+          </div>
+      </div>
+  </div>
+
+  <!-- JOIN THE TEAM -- JUMBOTRON -->
+  <div class="container-fluid">
+      <div class="row jumbotron">
+        <div class="col-12 text-center">
+            <p class="lead">We are always looking for talent to join the team, whether that is on or off the pitch. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                nulla pariatur.</p>
+            <a href="#">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Join the Team</button>
+            </a>
+        </div>
+      </div>
+  </div>
 
   <!-- ABOUT US -->
+  <div class="container-fluid mt-5">
+      <div class="row">
+          <div class="col">
+              <h1 class="display-4 text-center">About WCFC</h1>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-sm-12 col-md-6">
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
+                   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                   nulla pariatur.</p>
+          </div>
+          <div class="col-sm-12 col-md-6">
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
+                   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                   nulla pariatur.</p>
+          </div>
+      </div>
+  </div>
 
   <!-- CONNECTIONS-->
 
