--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- ABOUT US -->
   <div class="container-fluid mt-5">
       <div class="row">
-          <div class="col">
+          <div class="col-12">
               <h1 class="display-4 text-center">About WCFC</h1>
           </div>
       </div>
