Added fonts. Complete navbar and image slider.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
     integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous">
 
+    <!-- Google Fonts -->
+
     <!-- Custom css stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="img/WCFC_Logo.jpg">
@@ -21,7 +23,7 @@
   <body>
 
   <!-- NAVIGATION BAR -->
-  <nav class="navbar navbar-expand-md navbar-light white-bg sticky-top shadow">
+  <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top shadow">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
             <img class="logo navbar-brand" src="img/WCFC_Logo.jpg" alt="WCFC Logo">
@@ -51,26 +53,27 @@
     </div>
   </nav>
 
+  <!-- WELCOME -->
+  <div class="container-fluid">
+
+  </div>
+
   <!-- IMAGE SLIDER -->
   <div id="slides" class="carousel slide" data-ride="carousel">
       <ul class="carousel-indicators">
           <li data-target="#slides" data-slide-to="0" class="active"></li>
           <li data-target="#slides" data-slide-to="1"></li>
           <li data-target="#slides" data-slide-to="2"></li>
-          <li data-target="#slides" data-slide-to="3"></li>
       </ul>
       <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/jumbotron1.jpg" alt="Soccer 1">
+            <img src="img/jumbotron2.jpg" alt="Soccer 1">
           </div>
           <div class="carousel-item">
-            <img src="img/jumbotron2.jpg" alt="Soccer 2">
+            <img src="img/jumbotron3.jpg" alt="Soccer 2">
           </div>
           <div class="carousel-item">
-            <img src="img/jumbotron3.jpg" alt="Soccer 3">
-          </div>
-          <div class="carousel-item">
-            <img src="img/jumbotron4.jpg" alt="Soccer 4">
+            <img src="img/jumbotron1.jpg" alt="Soccer 3">
           </div>
       </div>
   </div>
