--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
   </nav>
 
   <!-- WELCOME -->
-  <div class="container-fluid">
-
+  <div class="container-fluid mt-5 mb-4">
+    <div class="col-12 text-center">
+        <h1 class="display-4">Welcome to Worcester County FC</h1>
+        <img src="img/WCFC_Logo.jpg" alt="WCFC Logo" id="welcome-logo">
+        <h2 class="display-5">A member of the BSSL</h2>
+    </div>
   </div>
 
   <!-- IMAGE SLIDER -->
@@ -68,6 +72,11 @@
       <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/jumbotron2.jpg" alt="Soccer 1">
+            <div class="carousel-caption">
+                <p class="font-weight-bold">“Some people think football is a matter of life and death. I don’t like that attitude. 
+                 I can assure them it is much more serious than that.”</p>
+                <p>- Bill Shankly</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="img/jumbotron3.jpg" alt="Soccer 2">
@@ -82,12 +91,8 @@
   <div class="container-fluid">
       <div class="row jumbotron">
         <div class="col-12 text-center">
-            <p class="lead">We are always looking for talent to join the team, whether that is on or off the pitch. 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                nulla pariatur.</p>
+            <p class="lead">With multiple teams in our organization, we are always looking for talent to join the team, 
+                whether that is on or off the pitch.</p>
             <a href="#">
                 <button type="button" class="btn btn-outline-secondary btn-lg">Join the Team</button>
             </a>
@@ -120,7 +125,21 @@
       </div>
   </div>
 
+  <hr class="my-4">
+
   <!-- CONNECTIONS-->
+  <div class="container-fluid padding">
+      <div class="row text-center padding">
+          <div class="col-12">
+              <h2 class="display-5">Connect</h2>
+          </div>
+          <div class="col-12 social padding">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+      </div>
+  </div>
 
   <!-- FOOTER-->
 
