--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
     integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous">
 
-    <!-- Google Fonts -->
 
     <!-- Custom css stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -100,54 +99,31 @@
       </div>
   </div>
 
-  <!-- ABOUT US -->
-  <div class="container-fluid mt-5">
-      <div class="row">
-          <div class="col-12">
-              <h1 class="display-4 text-center">About WCFC</h1>
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-sm-12 col-md-6">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
-                   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                   nulla pariatur.</p>
-          </div>
-          <div class="col-sm-12 col-md-6">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
-                   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                   nulla pariatur.</p>
-          </div>
-      </div>
-  </div>
+
 
   <hr class="my-4">
 
-  <!-- CONNECTIONS-->
-  <div class="container-fluid padding">
-      <div class="row text-center padding">
-          <div class="col-12">
-              <h2 class="display-5">Connect</h2>
-          </div>
-          <div class="col-12 social padding">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+  <!-- FOOTER-->
+  <footer>
+      <div class="container-fluid padding">
+          <div class="row text-center">
+              <div class="col-12">
+                <p>Connect with us!</p>
+                <div class="col-12 social padding">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+              </div>
           </div>
       </div>
-  </div>
+  </footer>
 
-  <!-- FOOTER-->
-
-  <!-- Optional JavaScript -->
-  
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    
+    </body>
 </html>
